fix alignment of links

--- a/css/main.css
+++ b/css/main.css
@@ -74,11 +74,11 @@ button {
     font-family: Roboto, Helvetica Neue, Helvetica, sans-serif;
     display: inline-block;
     cursor: pointer;
-    -webkit-transition: all .2s ease;
-    -moz-transition: all .2s ease;
-    -ms-transition: all .2s ease;
-    -o-transition: all .2s ease;
-    transition: all .2s ease;
+    -webkit-transition: all .1s ease;
+    -moz-transition: all .1s ease;
+    -ms-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease;
     border: none;
     outline: 0
 }
@@ -90,15 +90,13 @@ button {
     font-size: 14px;
     color: #fff;
     position: absolute;
-    padding: 0;
-    z-index: -1;
+    z-index: 1;
 	text-align: center;
-    background: transparent;
+    background: rgba(0,0,0,0.7);
 }
 .menu-buttons:hover {
     height: 53vh;
     width: 53vh;
-    background: rgba(0,0,0,0.7);
 }
 .menu-buttons:active {
     background: rgba(0,0,0,0.9);
@@ -129,62 +127,61 @@ button {
     right: 40vh;
 }
 
-.menu-buttons span {
+.menu-buttons a {
     font-size: 18px;
-    display: inline-block;
-    position: absolute;
+    color: #fff;
 }
 
-.menu-buttons div {
+.menu-buttons span {
     height: 100px;
     width: 100px;
-    text-align: center;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-
-.menu-buttons:nth-child(0n+1) div {
+.menu-buttons:nth-child(0n+1) span {
     position: absolute;
     bottom: calc(31.82vh - 50px);
     right: calc(31.82vh - 50px);
 }
 
-.menu-buttons:nth-child(0n+1) span {
-    top: 15vh;
-    left: 15vh;
+.menu-buttons:nth-child(0n+1) a {
+    bottom: calc(50% - 7.5px);
+    right: calc(50% - 7.5px);
     transform: rotate(-45deg);
 }
 
-.menu-buttons:nth-child(0n+2) div {
+.menu-buttons:nth-child(0n+2) span {
     position: absolute;
     bottom: calc(31.82vh - 50px);
     left: calc(31.82vh - 50px);
 }
 
-.menu-buttons:nth-child(0n+2) span {
+.menu-buttons:nth-child(0n+2) a {
     top: 15vh;
     right: 15vh;
     transform: rotate(45deg);
 }
 
-.menu-buttons:nth-child(0n+3) div {
-    position: absolute;
-    top: 31.82vh;
-    left: 31.82vh;
-}
 .menu-buttons:nth-child(0n+3) span {
+    position: absolute;
+    top: calc(31.82vh - 50px);
+    left: calc(31.82vh - 50px);
+}
+.menu-buttons:nth-child(0n+3) a {
     bottom: 15vh;
     right: 15vh;
     transform: rotate(-45deg);
 }
 
-.menu-buttons:nth-child(0n+4) div {
+.menu-buttons:nth-child(0n+4) span {
     position: absolute;
-    top: 31.82vh;
-    right: 31.82vh;
+    top: calc(31.82vh - 50px);
+    right: calc(31.82vh - 50px);
 }
 
-.menu-buttons:nth-child(0n+4) span {
+.menu-buttons:nth-child(0n+4) a {
     transform: rotate(45deg);
 }
 
@@ -249,15 +246,13 @@ button {
     background: #388e3c
 }
 #wrapper {
-    position: relative;
-    z-index: 0;
-    overflow: hidden;
+    position: absolute;
     width: 100%;
     min-height: 100vh;
-    background: #424242
+    overflow: hidden;
 }
 #menu {
-    position: absolute;
+    position: relative;
     top: 10vh;
     left: calc(50vw - 40vh);
     width: 80vh;
@@ -269,8 +264,7 @@ button {
     -o-transition: all .2s ease;
     transition: all .2s ease;
     vertical-align: middle;
-    z-index: 100;
-    background: #616161;
+    z-index: 2;
     -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
     -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26)
@@ -287,7 +281,6 @@ button {
 }
 #banner {
     position: fixed;
-    z-index: -5;
     width: 100%;
     height: 100%;
     max-height: 800px;
@@ -301,7 +294,6 @@ button {
     min-height: calc(100vh - 498px);
     margin-bottom: 150px;
     text-align: center;
-    background: #424242;
     -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
     -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26);
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .16), 0 2px 5px 0 rgba(0, 0, 0, .26)
@@ -359,12 +351,25 @@ button {
     padding: 10px
 }
 .description {
-    width: 32vh;
-    height: 32vh;
+    width: 60vh;
+    height: 80vh;
     position: absolute;
-    top: calc(50% - 16vh);
-    left: calc(50% - 16vh);
+    z-index: 5;
+    color: #fff;
+    display: flex;
+    margin: 0 10vh;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
+.description > h1 {
+    order: 1;
+}
+
+.description > span {
+    order: 2;
+}
+
 .card {
     position: relative;
     overflow: hidden;
